[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Reader/Reader.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Reader/Page.gd" type="Script" id=3]
[ext_resource path="res://Scenes/UI/Controls_help.tscn" type="PackedScene" id=4]

[node name="Reader" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0, 0, 0, 1 )

[node name="Image" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="Image"]

[node name="Music" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="Voice" type="AudioStreamPlayer" parent="."]
bus = "Voice"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="HelpPopup" type="Popup" parent="."]
rect_clip_content = true

[node name="Controls_help" parent="HelpPopup" instance=ExtResource( 4 )]

[connection signal="resized" from="." to="." method="_on_Reader_resized"]
[connection signal="visibility_changed" from="." to="." method="_on_Reader_visibility_changed"]
[connection signal="gui_input" from="Bg" to="." method="_on_Bg_gui_input"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
